Fix layout issues

--- a/frontend/src/pages/CreateEdition/Preview/styles.module.scss
+++ b/frontend/src/pages/CreateEdition/Preview/styles.module.scss
@@ -18,6 +18,7 @@
     &Image {
       @extend .previewMedia;
       cursor: pointer;
+      background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
     }
