--- a/frontend/src/pages/CreateEdition/styles.module.scss
+++ b/frontend/src/pages/CreateEdition/styles.module.scss
@@ -133,7 +133,7 @@
 
 	&Item {
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 
 		> div {
 			width: 100%;
